--- a/index.html
+++ b/index.html
@@ -13,6 +13,34 @@
 </head>
 <body>
 <header class="container">
+</header>
+
+<main class="grid container"> 
+<section id="featured" class="grid grid-flow-col gap-16">
+<div>
+  <img src="assets/images/Image 01.png" alt="">
+</div>
+<div class="grid grid-cols-2 gap-16">
+  <div>
+  <img src="assets/images/Image 02.png" alt="">  
+  </div>
+
+  <div>
+    <img src="assets/images/Image 03.png" alt="">  
+    </div>
+
+    <div>
+      <img src="assets/images/Image 04.png" alt="">  
+      </div>
+
+      <div>
+        <img src="assets/images/Image 05.png" alt="">  
+        </div>
+
+</div>
+</section>
+</main>
+
   <nav id="primary" class="grid grid-flow-col">
 <div>
   <img src="assets/icons/List.svg" alt="ícone de menu">
